--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,27 @@
 <div id="root">
-	<input type="text" id="input" v-model="message">
-	<p>This value of input is: {{message}}</p>
+	<button @click="remove">Remove top name</button>
+	<ul>
+		<li v-for="name in names" v-text="name"></li>
+	</ul>
+	<input type="text">
+	<button @click="add">Add name</button>
 </div>
 <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
-<script>
-	// let data= {
-	// 	message: "Nguyen Dinh Hung"
-	// };
-	// document.querySelector("#input").value=data.message;
-	new Vue({
+<script>	
+	var app=new Vue({
 		el: "#root",
 		data: {
-			message: "Nguyen Dinh Hung"
+			names: ['Hung','Han','Anh','Em']
+		},
+		methods: {
+			remove: function(){
+				this.names.shift();
+			},
+			add: function(){
+				var name=document.querySelector('input');
+				this.names.push(name.value);
+				name.value='';				
+			}
 		}
 	});
 </script>
