--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 	<ul>
 		<li v-for="name in names" v-text="name"></li>
 	</ul>
-	<input type="text">
+	<input type="text" v-model="new_name">
 	<button @click="add">Add name</button>
 </div>
 <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
@@ -11,16 +11,16 @@
 	var app=new Vue({
 		el: "#root",
 		data: {
+			new_name: '',
 			names: ['Hung','Han','Anh','Em']
 		},
 		methods: {
 			remove: function(){
 				this.names.shift();
 			},
-			add: function(){
-				var name=document.querySelector('input');
-				this.names.push(name.value);
-				name.value='';				
+			add(){				
+				this.names.push(this.new_name);
+				this.new_name='';				
 			}
 		}
 	});
