--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,6 +21,14 @@
 	</ul>
 	<input type="text" v-model="new_name">
 	<button @click="add">Add name</button>
+	<h2>All tasks</h2>
+	<ul>
+		<li v-for="task in tasks" v-text="task.description"></li>
+	</ul>
+	<h2>Incomplete tasks</h2>
+	<ul>
+		<li v-for="task in incompleteTasks" v-text="task.description"></li>
+	</ul>
 </div>
 <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
 <script>	
@@ -31,7 +39,15 @@
 			isLoading: true,
 			title: 'Click to pop',
 			new_name: '',
-			names: ['Hung','Han','Anh','Em']
+			names: ['Hung','Han','Anh','Em'],
+			tasks: [
+				{description: 'Mot',completed: true},
+				{description: 'Hai',completed: false},
+				{description: 'Ba',completed: true},
+				{description: 'Bon',completed: true},
+				{description: 'Nam',completed: false},
+				{description: 'Sau',completed: true}
+			]
 		},
 		methods: {
 			remove: function(){
@@ -41,6 +57,11 @@
 			add(){				
 				this.names.push(this.new_name);
 				this.new_name='';				
+			}
+		},
+		computed: {
+			incompleteTasks(){
+				return this.tasks.filter(task => !task.completed);
 			}
 		}
 	});
