--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,8 @@
 	}
 </style>
 <div id="root">
+	<task>Cao thu</task>
+	<task>Vo lam</task>
 	<h1 :class="className">Hello World</h1>
 	<button @click="remove" 
 		:title="title" 
@@ -30,8 +32,8 @@
 		<li v-for="task in incompleteTasks" v-text="task.description"></li>
 	</ul>
 </div>
-<script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
-<script>	
+<script>
+		
 	var app=new Vue({
 		el: "#root",
 		data: {
@@ -63,6 +65,6 @@
 			incompleteTasks(){
 				return this.tasks.filter(task => !task.completed);
 			}
-		}
-	});
+		}		
+	});	
 </script>
