epi8:nested component

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,8 +10,7 @@
 	}
 </style>
 <div id="root">
-	<task>Cao thu</task>
-	<task>Vo lam</task>
+<task-list></task-list>
 	<h1 :class="className">Hello World</h1>
 	<button @click="remove" 
 		:title="title" 
