epi9:com message

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,8 +9,10 @@
 		background: green;
 	}
 </style>
-<div id="root">
-<task-list></task-list>
+<div id="root" class="container">
+	<message title="Hello World" body="Lorem ipsum dolor sit amet, consectetur adipiscing elit."></message>
+	<message title="Nguyen Dinh Hung" body="Kamejoko Ha ha ha"></message>
+	<!-- <task-list></task-list>
 	<h1 :class="className">Hello World</h1>
 	<button @click="remove" 
 		:title="title" 
@@ -29,7 +31,7 @@
 	<h2>Incomplete tasks</h2>
 	<ul>
 		<li v-for="task in incompleteTasks" v-text="task.description"></li>
-	</ul>
+	</ul> -->
 </div>
 <script>
 		
