--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,64 +1,17 @@
-<style>
-	.color-red{
-		color:red;
-	}
-	.color-blue{
-		color:blue;
-	}
-	.is-loading{
-		background: green;
-	}
-</style>
 <div id="root" class="container">
-	<tabs>
-		<tab name="Tab mot" :selected="true">
-			<h1>Nguyen Dinh Hung</h1>
-		</tab>
-		<tab name="Tab hai">
-			<h1>Nguyen Dinh Han</h1>
-		</tab>
-		<tab name="Tab ba">
-			<h1>Nguyen Dinh Ba</h1>
-		</tab>
-		<tab name="Tab bon">
-			<h1>Nguyen Dinh Bon</h1>
-		</tab>		
-	</tabs>
+	<cou @chem="applied"></cou>
+	<h1 v-show="noticeShow">Bạn vừa nhập cái gì đó</h1>
 </div>
-<script>
-		
+<script>		
 	var app=new Vue({
 		el: "#root",
-		data: {
-			showModal: false,
-			className: 'color-red',
-			isLoading: true,
-			title: 'Click to pop',
-			new_name: '',
-			names: ['Hung','Han','Anh','Em'],
-			tasks: [
-				{description: 'Mot',completed: true},
-				{description: 'Hai',completed: false},
-				{description: 'Ba',completed: true},
-				{description: 'Bon',completed: true},
-				{description: 'Nam',completed: false},
-				{description: 'Sau',completed: true}
-			]
+		data:{
+			noticeShow: false
 		},
 		methods: {
-			remove: function(){
-				this.names.shift();
-				this.isLoading= !this.isLoading;
-			},
-			add(){				
-				this.names.push(this.new_name);
-				this.new_name='';				
+			applied(){
+				this.noticeShow=true;
 			}
-		},
-		computed: {
-			incompleteTasks(){
-				return this.tasks.filter(task => !task.completed);
-			}
-		}		
-	});	
+		}
+	});
 </script>
