epi14:named slot

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <div id="root" class="container">
-	<cou></cou>	
-	<acp></acp>
+	<modal>
+		<h1 slot="header">Hero Nguyen</h1>
+		<p slot="body">Day la noi dung</p>
+	</modal>
 </div>
 <script>		
 	var app=new Vue({
